    - Added Fuel Rods, as the power source for personal reactors. Currently, only Polonium fuel cells exist.
    - Added new recipes to acid dilution, and PModernised it slightly (post-0.4.6 modernisation)
    - Revamped oil processing in its entirety, keeping its basic structure but reworking the recipes and chains to be PModernised.

  Changes:
    - Gave glass its own row of recipes, and moved science bottles there.
    - Changed vacuum tubes crafting time from 5 to 7 seconds, and CRT's from 20 to 28.
    - Changed the science pack requirements for Francium Ultracool Centrifugal Kabbalism, now requiring all prerequisite science packs as to lower confusion for new players.
    - Upped Magneto orbital traps glass input from 8 to 24.
    - Changed all recipes that use white phosphorous to red phosphorous, which was like 3 but still
    - Gave big and behemoth biters fire resistance, and gave big and behemoth spitters acid/poison resistances.
    - Nerfed flamethrowers. Plus changed their usable fluids.
    - Remade molybdenite powder's icon.
    - Rerendered almost every item in the game to use HDRI's. WHERE HAVE THESE BEEN MY ENTIRE LIFE SWEET GOOGLILY
    - Changed stainless steel to also take molybdenum.
    - Redesigned Multi-metal item's icons.
    - Changed the crafting menu length to 12.
    - Made molten brass recipes line up with the better brass plate recipe.
    - Rebalanced TM washing/seawater washing to take 50 of each fluid, instead of 100.
    - Finally remade the fertiliser icon, and while it is what i actually wanted it to look like... mehhh? i might change it back, idk - its iconic.
    - Halved the amount of fluid needed to reform oil fractions.
    - Changed processing unit board molding to take ferric chloride and indium.
    - Added another 3 tiers of mining productivity, but nerfed tiers 1-4 to only give +5% productivity.
    - Moved power armour MK2 into Metalloids science pack.
    - Nerfed solid fuel to make it less useful for vehicles.