@@ -332,6 +332,7 @@ pm-hydrogen-fuel=Oxidiser
 pm-diesel-canister=Diesel fuel canister
 pm-kerosene-canister=Kerosene fuel canister
 pm-petrol-canister=Petrol fuel canister
+pm-naptha-canister=Naptha fuel canister
 pm-empty-fuel-canister=Empty fuel canister
 
 [entity-name]
